@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1802 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1803 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -210,3 +210,5 @@ Changes from NetBSD 6.0 to NetBSD 7.0:
 	zoneinfo: Import tzdata2013a. [apb 20130303]
 	zoneinfo: Import tzdata2013b. [apb 20130312]
 	libc: Update to tzcode2013b. [christos 20130315]
+	vmt(4): Synchronize the clock periodically to ensure it remains
+		up-to-date even when the host is suspended.  [jmmv 20130316]
